Replace Stream.collect(Collectors.toList()) by Stream.toList()