@@ -37,7 +37,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * {@link AuthorizationService} integration/conformance test
@@ -607,12 +606,9 @@ public class AuthorizationServiceImplTest extends ServiceTestBase {
     private void assertMatchingRules(AccessRequest request, Integer... expectedPriorities) {
         List<Rule> rules = authorizationService.getMatchingRules(request);
 
-        List<Long> pri =
-                rules.stream().map(r -> r.getPriority()).sorted().collect(Collectors.toList());
+        List<Long> pri = rules.stream().map(r -> r.getPriority()).sorted().toList();
         List<Long> exp =
-                Arrays.asList(expectedPriorities).stream()
-                        .map(i -> i.longValue())
-                        .collect(Collectors.toList());
+                Arrays.asList(expectedPriorities).stream().map(i -> i.longValue()).toList();
         assertEquals(exp, pri, "Bad rule set selected for filter " + request);
     }
 
