@@ -17,7 +17,6 @@ import org.geoserver.acl.authorization.AuthorizationService;
 import org.geoserver.acl.domain.rules.Rule;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Slf4j
@@ -67,7 +66,7 @@ public class AuthorizationServiceClientAdaptor implements AuthorizationService {
         try {
             apiRequest = mapper.toApi(request);
             apiResponse = apiClient.getMatchingRules(apiRequest);
-            return apiResponse.stream().map(ruleMapper::toModel).collect(Collectors.toList());
+            return apiResponse.stream().map(ruleMapper::toModel).toList();
         } catch (RuntimeException e) {
             log.error("Error getting matching rules for {}", request, e);
             throw e;
