@@ -32,7 +32,6 @@ import org.springframework.lang.Nullable;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @IsAuthenticated
@@ -94,14 +93,14 @@ public class DataRulesApiImpl implements DataRulesApiDelegate {
             query.setLimit(query.getLimit() + 1);
         }
         try {
-            list = service.getAll(query).collect(Collectors.toList());
+            list = service.getAll(query).toList();
             query.setLimit(requestedLimit); // avoid side effect once the method returns
         } catch (IllegalArgumentException e) {
             return support.error(BAD_REQUEST, e.getMessage());
         }
 
         support.setPreferredGeometryEncoding();
-        List<Rule> body = list.stream().map(support::toApi).collect(Collectors.toList());
+        List<Rule> body = list.stream().map(support::toApi).toList();
         String nextCursor;
         if (requestedLimit != null && body.size() > requestedLimit) {
             nextCursor = body.get(requestedLimit).getId();
