@@ -15,7 +15,6 @@ import org.springframework.util.StringUtils;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Configuration object for {@link ACLResourceAccessManager}.
@@ -129,10 +128,7 @@ public class AccessManagerConfig implements Serializable, Cloneable {
         if (acceptedRoles == null || acceptedRoles.isEmpty()) {
             this.roles = new ArrayList<>(List.of("*"));
         } else {
-            this.roles =
-                    acceptedRoles.stream()
-                            .filter(StringUtils::hasText)
-                            .collect(Collectors.toList());
+            this.roles = acceptedRoles.stream().filter(StringUtils::hasText).toList();
         }
     }
 
