@@ -31,7 +31,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * Creates the following rules, which the test cases expect as precondition:
@@ -153,7 +152,7 @@ public abstract class AclBaseTest extends GeoServerSystemTestSupport {
      * </ul>
      */
     private void createDefaultRules(RuleAdminService ruleAdminService) {
-        List<Rule> rules = ruleAdminService.getAll().collect(Collectors.toList());
+        List<Rule> rules = ruleAdminService.getAll().toList();
         rules.stream().map(Rule::getId).forEach(ruleAdminService::delete);
         ruleAdminService.insert(Rule.allow().withUsername("admin"));
         ruleAdminService.insert(Rule.allow().withService("WMS"));
